# swagger/faq_answers.json
@@ -35,7 +35,7 @@
           },
           {
             "in": "query",
-            "name": "created",
+            "name": "created_at",
             "schema": {
               "type": "date"
             }
@@ -45,6 +45,13 @@
             "name": "created_by",
             "schema": {
               "type": "integer"
+            }
+          },
+          {
+            "in": "query",
+            "name": "updated_at",
+            "schema": {
+              "type": "date"
             }
           },
           {
